# flowhigh

./: .gitignore  app.py  example.py  pyproject.toml
src/flowhigh/: __init__.py  cfm_superresolution.py  config.py  flowhighsr.py  postprocessing.py  pretrained.py  utils.py
src/flowhigh/audio/: __init__.py  codec.py  mel.py  postprocess.py  vocoder.py
src/flowhigh/flow/: __init__.py  losses.py  matcher.py  paths.py  sampler.py
src/flowhigh/models/: __init__.py  attend.py  common.py  convnext.py  flow.py  melvoco.py  modules.py  pos_emb.py  transformer.py
src/flowhigh/train/: data.py  optimizer.py  train.py  trainer.py
