[project]
name = "flowhigh"
version = "0.1"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "beartype>=0.22",
    "bigvgan",
    "einops>=0.8",
    "gateloop-transformer>=0.2",
    "huggingface-hub>=1.19",
    "librosa>=0.11",
    "numpy>=2.4",
    "scipy>=1.17",
    "torchdiffeq>=0.2",
    "torchinfo>=1.8",
    "torchode>=1.0",
    "tqdm>=4.68",
]

[project.optional-dependencies]
cpu = [
    "torch==2.11",
    "torchaudio==2.11",
]
cuda = [
    "torch==2.11; sys_platform != 'darwin'",
    "torchaudio==2.11; sys_platform != 'darwin'",
    "nvidia-cudnn-cu13>=9.19",
]
rocm = [
    "torch==2.11; sys_platform == 'linux'",
    "torchaudio==2.11; sys_platform == 'linux'",
    "pytorch-triton-rocm; sys_platform == 'linux'",
    "triton-rocm; sys_platform == 'linux'",
]
ui = [
    "gradio>=6.19",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
        { extra = "rocm" },
    ],
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm72"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", extra = "cuda", marker = "sys_platform != 'darwin'" },
    { index = "pytorch-rocm72", extra = "rocm", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", extra = "cpu" },
]
torchaudio = [
    { index = "pytorch-cu130", extra = "cuda", marker = "sys_platform != 'darwin'" },
    { index = "pytorch-rocm72", extra = "rocm", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", extra = "cpu" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm72", extra = "rocm", marker = "sys_platform == 'linux'" },
]
triton-rocm = [
    { index = "pytorch-rocm72", extra = "rocm", marker = "sys_platform == 'linux'" },
]
bigvgan = { url = "https://github.com/perennialtech/BigVGAN/releases/download/v2026.6.22/bigvgan-2026.6.22-cp311-cp311-linux_x86_64.whl" }

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "black>=26.5.1",
    "isort>=8.0.1",
    "ruff>=0.15.17",
]
